--- a/web_app_angular/client/app/components/datasetInfo/datasetInfo.html
+++ b/web_app_angular/client/app/components/datasetInfo/datasetInfo.html
@@ -1,14 +1,38 @@
 <h5 style="text-align:center;color:darkgray">DATASET</h5>
 <br>
 <div class="row">
+  <div class="col s10 offset-s5">
+    <ul class="pagination">
+      <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+      <li class="active"><a ui-sref="datasetInfo">1</a></li>
+      <li class="waves-effect"><a ui-sref="datasetInfoPage2">2</a></li>
+      <li class="waves-effect"><a ui-sref="datasetInfoPage3">3</a></li>
+      <li class="waves-effect"><a ui-sref="datasetInfoPage2"><i class="material-icons">chevron_right</i></a></li>
+    </ul>    
+  </div>
+</div>
+<div class="row">
   <div class="col s10 offset-s1">
     <div class="card grey lighten-5">
       <div class="card-content" >
         <canvas id="bar" class="chart chart-bar" chart-data="$ctrl.dataAges" chart-labels="$ctrl.labelsAges" 
-          chart-options="$ctrl.options"></canvas>  
+          chart-options="$ctrl.options" chart-colors ="$ctrl.colors " ></canvas>  
       </div>
     </div>
-    <p style="color:lightseagreen;text-align:center"> Broj učesnika u odnosu na životnu dob </p>         
+    <p style="color:lightseagreen;text-align:center"> Broj učesnika u odnosu na životnu dob </p>
+    <p style="color:lightseagreen;text-align:center" ><i class="material-icons" ng-click="$ctrl.showInfo(1)">info</i></p>         
+  </div>
+</div>
+<div class="row">
+  <div class="col s10 offset-s1">
+    <div class="card grey lighten-5">
+      <div class="card-content">
+        <canvas id="line" class="chart chart-line" chart-data="$ctrl.dataSecondChart" chart-labels="$ctrl.labelsAges" 
+          chart-options="$ctrl.options" chart-series="$ctrl.series" chart-dataset-override="$datasetOverride"></canvas>  
+      </div>
+    </div>
+    <p style="color:lightseagreen;text-align:center"> Koncentracija kreatinina/hemoglobina u odnosu na životnu dob učesnika </p>         
+    <p style="color:lightseagreen;text-align:center" ><i class="material-icons" ng-click="$ctrl.showInfo(2)" >info</i></p>
   </div>
 </div>
 
