--- a/web_app_angular/client/app/components/navigationBar/navigationBar.html
+++ b/web_app_angular/client/app/components/navigationBar/navigationBar.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper blue lighten-2">
-        <a ui-sref="home" class="brand-logo">&nbsp Chronic kidney disease</a>
+        <a ui-sref="home" class="brand-logo">&nbsp Hronična bubrežna insuficijencija</a>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a ui-sref="home">Početna</a></li>
